--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
